product-service/manifests/product-db-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-db-deployment
  labels:
    app: product-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-db
  template:
    metadata:
      labels:
        app: product-db
    spec:
      containers:
        - name: product-db
          image: mysql:8.4
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: product-db-pvc
