product-service/manifests/product-db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: product-db-service
  labels:
    app: product-db
spec:
  selector:
    app: product-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
