product-service/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  labels:
    app: product-service
spec:
  selector:
    app: product-service
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  type: NodePort
